Working for fun

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,14 @@
 cmake_minimum_required(VERSION 3.15)
 project(Nutex CXX)
 
-add_library(nutex INTERFACE)
-target_include_directories(nutex INTERFACE include)
-target_sources(nutex INTERFACE
+add_library(nutex
     include/nutex.hpp
     include/nutex/lock.hpp
+    include/nutex/rwlock.hpp
     include/nutex/lockref.hpp
     include/nutex/spinlock.hpp
-    )
-
-
+    src/spinlock.cpp)
+target_include_directories(nutex PUBLIC include)
 
 option(BUILD_TESTS "Build tests" ON)
 if (BUILD_TESTS)
